--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "leaflet-routing-machine": "^3.2.12",
     "ol": "^8.2.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-leaflet-routing-machine": "^0.0.5",
